# iw1x-server

./: CMakeLists.txt  README.md  iw1x.cfg
src/: functions.h  gsc.cpp  gsc.h  gsc_bots.cpp  gsc_curl.cpp  gsc_entity.cpp  gsc_exec.cpp  gsc_player.cpp  gsc_sqlite.cpp  gsc_utils.cpp  gsc_weapons.cpp  hook.cpp  hook.h  iw1x.cpp  iw1x.h  jump.cpp  pch.h  shared.h  types.h
